--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
-target/
-*.iml
+/target
+.project
+.settings
+.classpath
+**/.DS_Store
+**/target
+**/.project
+**/.settings
+**/.classpath
+**/.DS_Store
+**/bin/
+/bin/
+*.csv
+**/dependency-reduced-pom.xml
+pom.xml.bak
+
+## Intellij stuff
 .idea
+*.iml 
+**/.iml
+/conduit-ci/jenkins/jobs/
+/bc-src.zip
