--- a/rapid/pom.xml
+++ b/rapid/pom.xml
@@ -21,8 +21,7 @@
     </properties>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>rapid</artifactId>
-    <packaging>jar</packaging>
-    <version>0.9.0-SNAPSHOT</version>
+    <packaging>jar</packaging> 
     <name>rapid</name>
     <url>http://maven.apache.org</url>
     <parent>
@@ -59,17 +58,17 @@
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-netty</artifactId>
-            <version>1.7.0</version>
+            <version>1.43.1</version>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-protobuf</artifactId>
-            <version>1.7.0</version>
+            <version>1.43.1</version>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-stub</artifactId>
-            <version>1.7.0</version>
+            <version>1.43.1</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -85,6 +84,12 @@
             <groupId>org.zeromq</groupId>
             <artifactId>jeromq</artifactId>
             <version>0.4.3</version>
+        </dependency>
+        <dependency>
+            <!-- necessary for Java 9+ -->
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>annotations-api</artifactId>
+                <version>6.0.53</version>
         </dependency>
         <dependency>
             <groupId>pl.pragmatists</groupId>
@@ -108,9 +113,9 @@
                 <artifactId>protobuf-maven-plugin</artifactId>
                 <version>0.5.1</version>
                 <configuration>
-                    <protocArtifact>com.google.protobuf:protoc:3.4.0:exe:${os.detected.classifier}</protocArtifact>
+                    <protocArtifact>com.google.protobuf:protoc:3.19.2:exe:${os.detected.classifier}</protocArtifact>
                     <pluginId>grpc-java</pluginId>
-                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.7.0:exe:${os.detected.classifier}</pluginArtifact>
+                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.43.1:exe:${os.detected.classifier}</pluginArtifact>
                     <checkStaleness>true</checkStaleness>
                 </configuration>
                 <executions>
@@ -121,47 +126,14 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-            <!-- Add @Generated annotation to generated protobuf code for error-prone to ignore -->
-            <plugin>
-                <groupId>com.google.code.maven-replacer-plugin</groupId>
-                <artifactId>replacer</artifactId>
-                <version>1.5.3</version>
-                <executions>
-                    <execution>
-                        <phase>process-sources</phase>
-                        <goals>
-                            <goal>replace</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <includes>
-                        <include>${basedir}/target/generated-sources/protobuf/java/**/*.java</include>
-                    </includes>
-                    <replacements>
-                        <replacement>
-                            <token>\npublic final class</token>
-                            <value>@javax.annotation.Generated("protoc") public final class</value>
-                        </replacement>
-                        <replacement>
-                            <token>\npublic  final class</token>
-                            <value>@javax.annotation.Generated("protoc") public  final class</value>
-                        </replacement>
-                        <replacement>
-                            <token>\npublic enum</token>
-                            <value>@javax.annotation.Generated("protoc") public enum</value>
-                        </replacement>
-                    </replacements>
-                </configuration>
-            </plugin>
+            </plugin> 
             <!-- Test runner -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.20</version>
                 <configuration>
-                    <argLine>-Xms512m -Xmx1024m ${argLine}</argLine>
+                    <argLine>-Xms512m -Xmx1024m --illegal-access=permit</argLine>
                     <properties>
                         <property>
                             <name>listener</name>
@@ -169,31 +141,7 @@
                         </property>
                     </properties>
                 </configuration>
-            </plugin>
-            <!-- Code coverage tools -->
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.9</version>
-                <executions>
-                    <execution>
-                        <id>prepare-agent</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <excludes>
-                        <exclude>**/pb/*.class</exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.eluder.coveralls</groupId>
-                <artifactId>coveralls-maven-plugin</artifactId>
-                <version>4.3.0</version>
-            </plugin>
+            </plugin> 
         </plugins>
     </build>
 </project>
